--- a/index.html
+++ b/index.html
@@ -368,15 +368,15 @@
                 <div class="row">
                     <div class="portfolio-filter padd-15">
                         <div class="portfolio-filter-inner">
-                            <button type="button" class="active">Everything</button>
-                            <button type="button" >Art</button>
-                            <button type="button" >Crative</button>
-                            <button type="button" >Design</button>
+                            <button type="button" class="active" data-filter="all">Everything</button>
+                            <button type="button"  data-filter="art">Art</button>
+                            <button type="button"  data-filter="creative">Creative</button>
+                            <button type="button"  data-filter="design">Design</button>
                         </div>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="portfolio-item padd-15">
+                <div class="row portfolio-items">
+                    <div class="portfolio-item padd-15" data-category="art">
                         <div class="portfolio-item-inner">
                             <div class="portfolio-item-thumbnail">
                                 <img src="assets/img/836.jpg" alt="" style="height:300px;width:300px">
@@ -388,7 +388,7 @@
                         </div>
 
                     </div>
-                    <div class="portfolio-item padd-15">
+                    <div class="portfolio-item padd-15" data-category="creative">
                         <div class="portfolio-item-inner">
                             <div class="portfolio-item-thumbnail">
                                 <img src="assets/img/836.jpg" alt="" style="height:300px;width:300px">
@@ -400,7 +400,7 @@
                         </div>
 
                     </div>
-                    <div class="portfolio-item padd-15">
+                    <div class="portfolio-item padd-15" data-category="design">
                         <div class="portfolio-item-inner">
                             <div class="portfolio-item-thumbnail">
                                 <img src="assets/img/836.jpg" alt="" style="height:300px;width:300px">
@@ -412,7 +412,7 @@
                         </div>
 
                     </div>
-                    <div class="portfolio-item padd-15">
+                    <div class="portfolio-item padd-15" data-category="creative">
                         <div class="portfolio-item-inner">
                             <div class="portfolio-item-thumbnail">
                                 <img src="assets/img/836.jpg" alt="" style="height:300px;width:300px">
@@ -424,7 +424,7 @@
                         </div>
 
                     </div>
-                    <div class="portfolio-item padd-15">
+                    <div class="portfolio-item padd-15" data-category="creative">
                         <div class="portfolio-item-inner">
                             <div class="portfolio-item-thumbnail">
                                 <img src="assets/img/836.jpg" alt="" style="height:300px;width:300px">
@@ -436,7 +436,7 @@
                         </div>
 
                     </div>
-                    <div class="portfolio-item padd-15">
+                    <div class="portfolio-item padd-15" data-category="design">
                         <div class="portfolio-item-inner">
                             <div class="portfolio-item-thumbnail">
                                 <img src="assets/img/836.jpg" alt="" style="height:300px;width:300px">
@@ -482,7 +482,7 @@
             </div>
         </section>
 
-        <section class="section" id="blog">
+        <section class="section" >
             <div class="container">
                 <h2 class="section-title padd-15">Latest Posts</h2>
                 <div class="row">
@@ -535,7 +535,7 @@
             </div>
         </section>
 
-        <section class="section contact">
+        <section class="section contact" id="contact">
             <div class="container">
                 <h2 class="section-title padd-15"></h2>
                 <div class="row">
